fix(Rating):fixed overflow issue

--- a/src/components/UI/Input/Rating.module.scss
+++ b/src/components/UI/Input/Rating.module.scss
@@ -22,6 +22,8 @@
   span,
   input {
     width: 0;
+    top: 0;
+    left: 0;
     position: absolute;
     height: 0;
     opacity: 0;
